--- a/awx-rke2/metallb/kustomization.yaml
+++ b/awx-rke2/metallb/kustomization.yaml
@@ -2,6 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 namespace: metallb-system
 
 resources:
-  - github.com/metallb/metallb/config/native?ref=v0.13.9
+  - github.com/metallb/metallb/config/native?ref=v0.14.3
   - l2-mode-config.yaml
-  - ingress-lb-config.yaml
+  - single-lb-config.yaml
