Update and rename ingress-lb-config.yaml to single-lb-config.yaml

--- a/awx-rke2/metallb/single-lb-config.yaml
+++ b/awx-rke2/metallb/single-lb-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: metallb.io/v1beta1
 kind: IPAddressPool
 metadata:
-  name: ingress-lb
+  name: single-lb
   namespace: metallb-system
 spec:
   addresses:
